--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_REGISTER_REDIRECT_URL='hhtps://localhost:3000/register/finish'
+REACT_APP_REGISTER_REDIRECT_URL='http://localhost:3000/register/complete'
