--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.8.5",
+    "axios": "^0.21.0",
     "firebase": "^8.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -16,6 +17,7 @@
     "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
